fix(3187136947): align Account menu to Figma design

--- a/src/components/UI/MenuTitle/MenuTitle.module.scss
+++ b/src/components/UI/MenuTitle/MenuTitle.module.scss
@@ -5,4 +5,5 @@
   font-size: 20px;
   line-height: 30px;
   color: $--color-white;
+  padding-bottom: 8px;
 }
